--- a/louisAllemann.html
+++ b/louisAllemann.html
@@ -5,7 +5,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
     <head>
-        <title>louisAllemann</title>
+        <title>louisAllemannTest2</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
