--- a/htdocs/html/partners.html
+++ b/htdocs/html/partners.html
@@ -204,7 +204,7 @@
             </article>     
             
             <article>                
-                <img alt="henniez" src="htdocs/img/content/logo_henniez.png" title="HENNIEZ" />
+                <img alt="henniez" src="htdocs/img/content/logo_henniez.jpg" title="HENNIEZ" />
                 <p>
                     Depuis 1905, L'eau minérale <a href="http://fr.henniez-restaurant.ch/" target="_blank">HENNIEZ</a> est embouteillée au cœur de la Broye vaudoise, non loin d'un paysage vallonné qui s'étire entre les communes de Seigneux, Cerniaz et Henniez.
                 </p>            
