html press, about, partners, videos contacts

--- a/htdocs/html/videos.html
+++ b/htdocs/html/videos.html
@@ -1,11 +1,84 @@
-		<ul id="subnav">
-			<li class="sn-all"><a href="#all">All</a></li>
-			<li class="sn-event"><a href="#event">Event</a></li>
-			<li class="sn-speaker"><a href="#speaker">Speaker</a></li>
-			<li class="sn-theme"><a href="#theme">Theme</a></li>
-		</ul>
+        <ul id="subnav">
+            <li class="sn-all"><a href="#all">All</a></li>
+            <li class="sn-event"><a href="#event">Event</a></li>
+            <li class="sn-speaker"><a href="#speaker">Speaker</a></li>
+            <li class="sn-theme"><a href="#theme">Theme</a></li>
+        </ul>
     </nav>
 </header>
+
+<!--all videos-->
 <section id="content">
-	
+    <h1 id="all">All TED videos</h1>
+        <article id="video">
+
+            <!--video-->
+            <video controls="controls">
+                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=e-txR1WSPBs" width="200" height="111">
+                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
+                    <param name ="mode" value="transparent" />
+
+                 <!--[if lte IE 6]-->   
+                <embed src="https://www.youtube.com/watch?v=e-txR1WSPBs" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
+                <!--[endif]-->
+                </object>
+            </video>
+               <p>video name</p>
+        </article>
+    
+        <article id="video">
+        <!--next video-->
+            <video controls="controls">
+                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=pp-wmEKWLSo" width="200" height="111">
+                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
+                    <param name ="mode" value="transparent" />
+
+                 <!--[if lte IE 6]-->   
+                <embed src="https://www.youtube.com/watch?v=pp-wmEKWLSo" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
+                <!--[endif]-->
+                </object>
+         </video>
+         <p>video name</p>
+    </article>
+</section>
+
+<!--event videos-->
+<section id="content">
+    <h1 id="event">Event videos</h1>
+        <article id="video">
+
+            <!--video-->
+            <video controls="controls">
+                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=e-txR1WSPBs" width="200" height="111">
+                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
+                    <param name ="mode" value="transparent" />
+
+                 <!--[if lte IE 6]-->   
+                <embed src="https://www.youtube.com/watch?v=e-txR1WSPBs" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
+                <!--[endif]-->
+                </object>
+         </video>
+            <p>video name</p>
+         </article>
+</section>
+
+
+<!--event videos-->
+<section id="content">
+    <h1 id="speaker">Speaker videos</h1>
+        <article id="video">
+
+            <!--video-->
+            <video controls="controls">
+                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=e-txR1WSPBs" width="200" height="111">
+                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
+                    <param name ="mode" value="transparent" />
+
+                 <!--[if lte IE 6]-->   
+                <embed src="https://www.youtube.com/watch?v=e-txR1WSPBs" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
+                <!--[endif]-->
+                </object>
+         </video>
+            <p>video name</p>
+         </article>
 </section>
