--- a/htdocs/html/partners.html
+++ b/htdocs/html/partners.html
@@ -211,7 +211,7 @@
             </article>  
             
             <article>                
-                <img alt="AALT" src="htdocs/img/content/logo_aalt.png" title="A.L.T | rent a car" />
+                <img alt="AALT" src="htdocs/img/content/logo_aalt.png" title="A.A.L.T | rent a car" />
                 <p>
                     Even though we try to drive as little as possible, organising such an event without car is not possible. <a href="http://www.aalt.ch/" target="_blank">AALT Car Rental</a> lets us use electrical cars for that. They are really cool to drive.
                 </p>            
