resolution de conflits

--- a/htdocs/html/videos.html
+++ b/htdocs/html/videos.html
@@ -7,78 +7,69 @@
     </nav>
 </header>
 
+
+
 <!--all videos-->
-<section id="content">
+<section id="content" class="video">
     <h1 id="all">All TED videos</h1>
-        <article id="video">
-
-            <!--video-->
-            <video controls="controls">
-                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=e-txR1WSPBs" width="200" height="111">
-                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
-                    <param name ="mode" value="transparent" />
-
-                 <!--[if lte IE 6]-->   
-                <embed src="https://www.youtube.com/watch?v=e-txR1WSPBs" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
-                <!--[endif]-->
-                </object>
-            </video>
-               <p>video name</p>
-        </article>
-    
-        <article id="video">
-        <!--next video-->
-            <video controls="controls">
-                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=pp-wmEKWLSo" width="200" height="111">
-                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
-                    <param name ="mode" value="transparent" />
-
-                 <!--[if lte IE 6]-->   
-                <embed src="https://www.youtube.com/watch?v=pp-wmEKWLSo" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
-                <!--[endif]-->
-                </object>
-         </video>
-         <p>video name</p>
+    <article>
+        <iframe src="http://www.youtube.com/embed/ROXUPr8Wqds" frameborder="0"></iframe>
+        <p>videoname</p>
     </article>
-</section>
 
-<!--event videos-->
-<section id="content">
-    <h1 id="event">Event videos</h1>
-        <article id="video">
+    <article>
+        <iframe src="http://www.youtube.com/embed/KM4Xe6Dlp0Y" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
 
-            <!--video-->
-            <video controls="controls">
-                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=e-txR1WSPBs" width="200" height="111">
-                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
-                    <param name ="mode" value="transparent" />
+    <article>
+        <iframe src="http://www.youtube.com/embed/YyBk55G7Keo" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
 
-                 <!--[if lte IE 6]-->   
-                <embed src="https://www.youtube.com/watch?v=e-txR1WSPBs" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
-                <!--[endif]-->
-                </object>
-         </video>
-            <p>video name</p>
-         </article>
-</section>
+    <article>
+        <iframe src="http://www.youtube.com/embed/jpe-LKn-4gM" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
 
+    <article>
+        <iframe src="http://www.youtube.com/embed/yQvbKfEKLMI" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
 
-<!--event videos-->
-<section id="content">
-    <h1 id="speaker">Speaker videos</h1>
-        <article id="video">
+    <article>
+        <iframe src="http://www.youtube.com/embed/AHcTWlxWzpE" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
 
-            <!--video-->
-            <video controls="controls">
-                <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=e-txR1WSPBs" width="200" height="111">
-                    <param name="tedEvent" value="https://www.youtube.com/watch?v=e-txR1WSPBs" />
-                    <param name ="mode" value="transparent" />
+    <article>
+        <iframe src="http://www.youtube.com/embed/ROXUPr8Wqds" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
 
-                 <!--[if lte IE 6]-->   
-                <embed src="https://www.youtube.com/watch?v=e-txR1WSPBs" type="application/x-shockwave-flash"  allowscriptaccess="always" allowfullscreen="true" width="200" height="111" />
-                <!--[endif]-->
-                </object>
-         </video>
-            <p>video name</p>
-         </article>
+    <article>
+        <iframe src="http://www.youtube.com/embed/KM4Xe6Dlp0Y" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
+
+    <article>
+        <iframe src="http://www.youtube.com/embed/YyBk55G7Keo" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
+
+    <article>
+        <iframe src="http://www.youtube.com/embed/jpe-LKn-4gM" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
+
+    <article>
+        <iframe src="http://www.youtube.com/embed/yQvbKfEKLMI" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
+
+    <article>
+        <iframe src="http://www.youtube.com/embed/AHcTWlxWzpE" frameborder="0"></iframe>
+        <p>videoname</p>
+    </article>
+
 </section>
