--- a/htdocs/html/videos.html
+++ b/htdocs/html/videos.html
@@ -10,9 +10,15 @@
 
 
 <!--all videos-->
-<section id="content" class="video">
-    <h1 id="all">All TED videos</h1>
+<section id="content">
     <article>
+        <h1 id="all">All TED videos</h1>
+    </article>
+</section>
+        
+<section id="content" class="video">
+    <article>
+        <img src="http://img.youtube.com/vi/ROXUPr8Wqds/1.jpg">
         <iframe src="http://www.youtube.com/embed/ROXUPr8Wqds" frameborder="0"></iframe>
         <p>videoname</p>
     </article>
